<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/yellow_orange_gradient_bckgrnd"
    android:paddingTop="50dp"
    android:alpha="0.9">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/logo_image"
        android:backgroundTint="@color/transparent_white"
        android:src="@drawable/ic_001_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>


    <EditText

        android:id="@+id/email_text"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:ems="10"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:inputType="textEmailAddress"
        android:drawablePadding="15dp"
        android:hint="@string/prompt_email"
        android:paddingTop="5dp"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/email_img"
        tools:ignore="RtlHardcoded,RtlSymmetry"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password_text"
        android:inputType="textPassword"
        android:ems="10"
        android:hint= "@string/prompt_password"
        android:cursorVisible="true"
        android:paddingTop="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/email_text"
        android:paddingStart="10dp"
        android:drawableStart="@drawable/key_img"/>


    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:text="@string/sign_up"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/label_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/colorAccent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="84dp"/>

</RelativeLayout>


