<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/activityBackground">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        android:id="@+id/main_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_navigation_view_dim"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_navigation_view_shape"
        style="@style/bottom_navigation_view_style"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>