...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:layout_marginBottom="@dimen/bottom_navigation_view_dim"
    android:id="@+id/main_layout">

    <include layout="@layout/titlebar" android:id="@id/titlebar"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profile_image"
        android:layout_below="@id/titlebar"
        android:background="@drawable/back"
        android:backgroundTint="@color/transparent_white"
        android:src="@drawable/ic_001_account_24dp"
        android:layout_marginTop="@dimen/personal_page_dim"
        android:layout_marginBottom="@dimen/personal_page_dim"
...
